[App] fix: make it work on jdk 17